# jorik-cli

./: Cargo.toml  README.md  build.rs  confetti.js
.github/workflows/: build.yml
installer/: jorik-cli.iss
src/: api.rs  ascii.rs  image.rs  main.rs  tui.rs
tests/: version.rs
